<resources>
    <string name="app_name">RabbitMQ Monitor</string>

    <string name="sync_interval">Sync interval</string>
    <string name="sync_interval_desc">How often should synchronize?</string>
    <string name="notifications">Notification options</string>
    <string name="notifications_desc">Configure the notification options</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="enable_notifications_desc">Enable notification information message</string>
    <string name="enable_sound_desc">Play sound on notification</string>
    <string name="enable_sound">Play sound</string>
    <string name="enable_vibrate_desc">Vibrate phone on notification</string>
    <string name="enable_vibrate">Vibrate phone</string>
    <string name="enable_led_desc">Flash lights on notification</string>
    <string name="enable_led">LED</string>
    <string name="action_accept">Accept</string>



    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title">General</string>
    <string name="hostname">Hostname</string>
    <string name="hostname_summary">Hostname for RabbitMQ</string>
    <string name="port">Port</string>
    <string name="port_summary">RabbitMQ Management port. Default is 15672. The port for RabbitMQ versions prior to 3.0 is 55672.</string>
    <string name="username">Username</string>
    <string name="username_summary">Username for RabbitMQ</string>
    <string name="password">Password</string>
    <string name="password_summary">Password for RabbitMQ</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="invalid_creds">Response code 401 : Please check your credentials</string>
    <string name="incomplete_info">Either of hostname, port or credentials is not set</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <bool name="enable_widget_header_default">true</bool>
    <bool name="enable_autosync">true</bool>
    <bool name="enable_notifications">true</bool>
    <bool name="enable_sound">true</bool>
    <bool name="enable_vibrate">true</bool>
    <bool name="enable_led">true</bool>

    <bool name="allowUseDefault">false</bool>

    <string name="widget_text_size_desc">Adjust the Text Size in the widget</string>
    <string name="widget_text_size">Text size</string>
    <string name="widget_background_opacity">Background Opacity</string>
    <string name="widget_background_opacity_desc">Adjust the opacity of the background</string>
    <string name="widget_title_color_desc">Set the title color</string>
    <string name="widget_title_color">Title Color</string>
    <string name="widget_count_color_desc">Set the count color</string>
    <string name="widget_count_color">Count color</string>

    <string name="widget_appearance">Widget Appearance</string>
    <string name="widget_appearance_desc">Configure the appearance of widget</string>

    <string name="widget_configuration">Widget options</string>
    <string name="widget_configuration_desc">Configure the widget options</string>

    <string name="widget_background_color">Background color / Opacity</string>
    <string name="widget_background_color_desc">Set the background color and opacity of the widget</string>

    <string name="enable_widget_header">Show widget header</string>
    <string name="enable_widget_header_desc">Show the header with icons and last updated time</string>

    <string-array name="sync_interval">
        <item>@string/every1hour</item>
        <item>@string/every2hour</item>
        <item>@string/every4hour</item>
        <item>@string/every6hour</item>
        <item>@string/every12hour</item>
        <item>@string/every24hour</item>
    </string-array>
    <string-array name="sync_interval_values">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
    </string-array>
    <string-array name="themes">
        <item>@string/dark</item>
        <item>@string/light</item>
    </string-array>
    <string-array name="themes_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="minimum_unread">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
    </string-array>
    <string-array name="minimum_unread_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
    </string-array>
    <string-array name="widget_textsize">
        <item>@string/small</item>
        <item>@string/medium</item>
        <item>@string/large</item>
    </string-array>
    <string-array name="widget_textsize_values">
        <item>12</item>
        <item>14</item>
        <item>16</item>
    </string-array>
    <string-array name="sort_order">
        <item>@string/most_unread_first</item>
        <item>@string/alphabetical</item>
    </string-array>
    <string-array name="sort_order_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="dark">Dark</string>
    <string name="black">Black</string>
    <string name="sepia">Sepia</string>
    <string name="light">Light</string>

    <string name="sort_order">Widget sort order</string>
    <string name="most_unread_first">Most unread first</string>

    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="every1hour">Every 1 hour</string>
    <string name="every2hour">Every 2 hours</string>
    <string name="every4hour">Every 4 hours</string>
    <string name="every6hour">Every 6 hours</string>
    <string name="every12hour">Every 12 hours</string>
    <string name="every24hour">Every 24 hours</string>

    <string name="sync_interval_default">1</string>
    <string name="minimum_unread_default">1</string>
    <string name="pick_theme_default">0</string>
    <string name="sort_order_default">0</string>
    <string name="font_medium_default">14</string>
    <string name="widget_sort_order_default">0</string>
    <string name="default_theme">0</string>

    <integer name="widget_background_color">-2130706432</integer>
    <integer name="widget_count_color">-9738393</integer>
    <integer name="widget_title_color">-1800</integer>

    <color name="white_opaque">#FFFFFFFF</color>
    <color name="pitch_black">#FF000000</color>

    <string name="alphabetical">Alphabetical</string>
    <string name="sync_started">Synchronization started</string>

    <string name="lastupdate_display_format">Updated: %s</string>
    <string name="login_required_desc">Hostname not set</string>
    <string name="no_unread_items">No items</string>

    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="dialog_color_picker">Color Picker</string>

    <string name="enable_autosync_desc">Configure feed sync interval. Notification will fire based on this interval</string>
    <string name="enable_autosync">Auto sync</string>
    <string name="sync_options">Sync Options</string>

    <string name="action_about">About MQ Q Monitor</string>
    <string name="action_about_desc">View information about RabbitMQ Q Monitor</string>

    <string name="follow_twitter">Follow me on Twitter</string>
    <string name="about_content">v1.0 \nDeveloped by Madhur \n\nReport any issues to ahuja.madhur@gmail.com</string>
    <string name="error_occurred">Error occurred! Please check your settings</string>
    <string name="rabbitmq_version">RabbitMQ Version</string>
    <string name="erlang_version">Erlang Version</string>
    <string name="consumers">Consumers</string>
    <string name="queues">Queues</string>
    <string name="exchanges">Exchanges</string>
    <string name="connections">Connections</string>
    <string name="channels">Channels</string>
    <string name="network_not_available">Network not available</string>
</resources>
