<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


<PreferenceCategory android:title="@string/pref_title">
    <EditTextPreference android:title="@string/hostname" android:key="hostname" android:summary="@string/hostname_summary">

    </EditTextPreference>

    <EditTextPreference android:title="@string/port" android:inputType="number"  android:key="port" android:summary="@string/port_summary">

    </EditTextPreference>

    <EditTextPreference android:title="@string/username" android:key="username"  android:summary="@string/username_summary">

    </EditTextPreference>

    <EditTextPreference android:title="@string/password" android:key="password" android:inputType="textPassword" android:summary="@string/password_summary">

    </EditTextPreference>



</PreferenceCategory>

    <!--<PreferenceCategory android:title="@string/notifications" android:summary="@string/notifications_desc" >-->
        <!--<CheckBoxPreference-->
            <!--android:defaultValue="@bool/enable_notifications"-->
            <!--android:key="enable_notifications"-->
            <!--android:summary="@string/enable_notifications_desc"-->
            <!--android:title="@string/enable_notifications" >-->
        <!--</CheckBoxPreference>-->
        <!--<CheckBoxPreference-->
            <!--android:defaultValue="@bool/enable_sound"-->
            <!--android:dependency="enable_notifications"-->
            <!--android:key="enable_sound"-->
            <!--android:summary="@string/enable_sound_desc"-->
            <!--android:title="@string/enable_sound" />-->
        <!--<CheckBoxPreference-->
            <!--android:defaultValue="@bool/enable_vibrate"-->
            <!--android:dependency="enable_notifications"-->
            <!--android:key="enable_vibrate"-->
            <!--android:summary="@string/enable_vibrate_desc"-->
            <!--android:title="@string/enable_vibrate" />-->
        <!--<CheckBoxPreference-->
            <!--android:defaultValue="@bool/enable_led"-->
            <!--android:dependency="enable_notifications"-->
            <!--android:key="enable_led"-->
            <!--android:summary="@string/enable_led_desc"-->
            <!--android:title="@string/enable_led" />-->



    <!--</PreferenceCategory>-->

    <PreferenceCategory android:title="@string/sync_options">


        <ListPreference
            android:defaultValue="@string/sync_interval_default"
            android:dependency="enable_autosync"
            android:entries="@array/sync_interval"
            android:entryValues="@array/sync_interval_values"
            android:key="sync_interval"
            android:summary="@string/sync_interval_desc"
            android:title="@string/sync_interval" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="widget_options"
        android:title="@string/widget_configuration" android:summary="@string/widget_configuration_desc">
        <CheckBoxPreference
            android:defaultValue="@bool/enable_widget_header_default"
            android:key="enable_widget_header"
            android:summary="@string/enable_widget_header_desc"
            android:title="@string/enable_widget_header" />



        <ListPreference
            android:defaultValue="@string/font_medium_default"
            android:entries="@array/widget_textsize"
            android:entryValues="@array/widget_textsize_values"
            android:key="widget_text_size"
            android:summary="@string/widget_text_size_desc"
            android:title="@string/widget_text_size" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@integer/widget_background_color"
            android:key="widget_background_color"
            android:summary="@string/widget_background_color_desc"
            android:title="@string/widget_background_color" >
            alphaSlider="true"



        </net.margaritov.preference.colorpicker.ColorPickerPreference>
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:defaultValue="@integer/widget_title_color"
            android:key="widget_title_color"
            android:summary="@string/widget_title_color_desc"
            android:title="@string/widget_title_color" >
            alphaSlider="true"



        </net.margaritov.preference.colorpicker.ColorPickerPreference>
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:defaultValue="@integer/widget_count_color"
            android:key="widget_count_color"
            android:summary="@string/widget_count_color_desc"
            android:title="@string/widget_count_color" >
            alphaSlider="true"





        </net.margaritov.preference.colorpicker.ColorPickerPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/action_about" >
        <Preference
            android:key="action_about"
            android:summary="@string/action_about_desc"
            android:title="@string/action_about" />
        <Preference
            android:key="follow_twitter"
            android:title="@string/follow_twitter" />
    </PreferenceCategory>



</PreferenceScreen>
